tests/fsharp/conformance/inference/E_TwoDifferentTypeVariables01.bsl

E_TwoDifferentTypeVariables01.fsx(61,37,61,38): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C13.M: x: 'a * y: 'a -> One
 - static member C13.M: x: 'a * y: int -> Three

E_TwoDifferentTypeVariables01.fsx(62,37,62,38): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C24.M: x: 'a * y: 'b -> Two
 - static member C24.M: x: 'a * y: C -> Four

E_TwoDifferentTypeVariables01.fsx(63,37,63,38): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C13.M: x: 'a * y: 'a -> One
 - static member C13.M: x: 'a * y: int -> Three

E_TwoDifferentTypeVariables01.fsx(64,37,64,38): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known types of arguments: 'a * 'b

Candidates:
 - static member C13.M: x: 'a * y: 'a -> One
 - static member C13.M: x: 'a * y: int -> Three
